# tui-s3

./: Cargo.toml  README.md  tui-aws.fish
src/: frontend.rs  lib.rs  main-cli.rs.bak  main.rs
src/controller/: mod.rs
src/frontend/: mod.rs
src/glue/: client.rs  controller.rs  main.rs  mod.rs  view_model.rs
src/s3/: main.rs  mod.rs
src/s3/client/: mod.rs
src/s3/controller/: mod.rs
src/s3/frontend/: mod.rs
src/s3/model/: mod.rs
src/s3/view_model/: mod.rs  ui_converter.rs
src/view_model/: mod.rs  ui_converter.rs
