[package]
name = "tui-s3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.2.0"
aws-sdk-s3 = "0.2.0"
aws-smithy-types = "0.32.0"
futures-util = "0.3.18"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6.9", features = ["full"] }
tui = { version = "0.16", features = ["crossterm"], default-features = false }
crossterm = "0.22.1"
eyre = "0.6.5"
futures = "0.3.15"
bytesize = "1.0.1"
strum = "0.21.0"
strum_macros = "0.21.1"
